--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.2",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.31",
     "next": "9.3.5",
+    "node-fetch": "^2.6.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "remark": "^12.0.0",
+    "remark-html": "^11.0.2",
+    "sass": "^1.26.8"
   }
 }
